--- a/src/assets/bib/2012-LM-Randomness-Order-Evolution.bib
+++ b/src/assets/bib/2012-LM-Randomness-Order-Evolution.bib
@@ -30,6 +30,7 @@
   booktitle	= {Computation, Physics and Beyond},
   doi		= {10.1007/978-3-642-27654-5_22},
   eprint	= {https://montevil.org/assets/pdf/2012-LM-Randomness-Order-Evolution.pdf},
+  note		= {\url{https://montevil.org/publications/chapters/2012-LM-Randomness-Order-Evolution/}},
   keywords	= {Entropy Production, Biological Evolution, Irreversible
 		  Process, Combinatorial Complexity, Biological
 		  Organization},
