--- a/src/assets/bib/2012-LMK-No-Entailing-Laws-Enablement.bib
+++ b/src/assets/bib/2012-LMK-No-Entailing-Laws-Enablement.bib
@@ -49,6 +49,7 @@
   doi		= {10.1145/2330784.2330946},
   edition	= {GECCO'12},
   eprint	= {https://montevil.org/assets/pdf/2012-LMK-No-Entailing-Laws-Enablement.pdf},
+  note		= {\url{https://montevil.org/publications/chapters/2012-LMK-No-Entailing-Laws-Enablement/}},
   keywords	= {conservation properties, symmetries, biological
 		  causality},
   language	= {english},
