--- a/src/assets/bib/2014-LM-Introduction-New-Perspectives.bib
+++ b/src/assets/bib/2014-LM-Introduction-New-Perspectives.bib
@@ -29,6 +29,7 @@
 		  discussion in this note.},
   booktitle	= {Essays for the Luca Cardelli Fest},
   eprint	= {https://montevil.org/assets/pdf/2014-LM-Introduction-New-Perspectives.pdf},
+  note		= {\url{https://montevil.org/publications/chapters/2014-LM-Introduction-New-Perspectives/}},
   language	= {english},
   url		= {http://research.microsoft.com/apps/pubs/default.aspx?id=226237}
 }
