--- a/src/assets/bib/2014-LM-Perspectives-Organisms.bib
+++ b/src/assets/bib/2014-LM-Perspectives-Organisms.bib
@@ -37,5 +37,6 @@
 		  book may also be beneficial for graduate students who want
 		  to enter this field.},
   doi		= {10.1007/978-3-642-35938-5},
+  note		= {\url{https://montevil.org/publications/books/2014-LM-Perspectives-Organisms/}},
   language	= {english}
 }
