--- a/src/assets/bib/2014-LM-ScalingScaleSymmetries.bib
+++ b/src/assets/bib/2014-LM-ScalingScaleSymmetries.bib
@@ -12,6 +12,7 @@
   series	= {Lecture Notes in Morphogenesis},
   doi		= {10.1007/978-3-642-35938-5_2},
   eprint	= {https://montevil.org/assets/pdf/2014-LM-ScalingScaleSymmetries.pdf},
+  note		= {\url{https://montevil.org/publications/chapters/2014-LM-ScalingScaleSymmetries/}},
   keywords	= {Scaling; variability; allometry; fractals; regulation;
 		  criticality},
   language	= {english}
