--- a/src/assets/bib/2014-LMP-Incompressible-Complexite.bib
+++ b/src/assets/bib/2014-LMP-Incompressible-Complexite.bib
@@ -46,6 +46,7 @@
 		  matière.},
   doi		= {10.4000/books.cdf.3363},
   eprint	= {https://montevil.org/assets/pdf/2014-LMP-Incompressible-Complexite.pdf},
+  note		= {\url{https://montevil.org/publications/chapters/2014-LMP-Incompressible-Complexite/}},
   isbn		= {9782722603301},
   language	= {french}
 }
