--- a/src/assets/bib/2014-PM-Ecological-Models-Cells.bib
+++ b/src/assets/bib/2014-PM-Ecological-Models-Cells.bib
@@ -27,6 +27,7 @@
 		  we apply these ideas to a situation of gene therapy.},
   doi		= {10.1007/s13752-014-0190-y},
   eprint	= {https://montevil.org/assets/pdf/2014-PM-Ecological-Models-Cells.pdf},
+  note		= {\url{https://montevil.org/publications/articles/2014-PM-Ecological-Models-Cells/}},
   keywords	= {Ecosystem engineering, Inertial dynamics, Intraorganismal
 		  ecology, Niche construction, Nongenetic inheritance},
   language	= {english},
