--- a/src/assets/bib/2016-MML-Theoretical-Principles-Organization.bib
+++ b/src/assets/bib/2016-MML-Theoretical-Principles-Organization.bib
@@ -25,6 +25,7 @@
 		  variation.},
   doi		= {10.1016/j.pbiomolbio.2016.07.005},
   eprint	= {https://montevil.org/assets/pdf/2016-MML-Theoretical-Principles-Organization.pdf},
+  note		= {\url{https://montevil.org/publications/articles/2016-MML-Theoretical-Principles-Organization/}},
   keywords	= {Theoretical principle, Organization, Constraints, Closure,
 		  Stability, Organicism},
   language	= {english},
