--- a/src/assets/bib/2016-PMS-Sama-Method-Morphometry.bib
+++ b/src/assets/bib/2016-PMS-Sama-Method-Morphometry.bib
@@ -35,6 +35,7 @@
   doi		= {10.1371/journal.pone.0153022},
   editor	= {Tiffany Seagroves},
   eprint	= {https://montevil.org/assets/pdf/2016-PMS-Sama-Method-Morphometry.pdf},
+  note		= {\url{https://montevil.org/publications/articles/2016-PMS-Sama-Method-Morphometry/}},
   keywords	= {Open source software, Image analysis, Ellipsoids,
 		  Morphogenesis, Computer software, Morphometry, Image
 		  processing, Branching morphogenesis},
