--- a/src/assets/bib/2016-SLM-Theoretical-Principle-Default-State.bib
+++ b/src/assets/bib/2016-SLM-Theoretical-Principle-Default-State.bib
@@ -38,6 +38,7 @@
 		  principle.},
   doi		= {10.1016/j.pbiomolbio.2016.06.006},
   eprint	= {https://montevil.org/assets/pdf/2016-SLM-Theoretical-Principle-Default-State.pdf},
+  note		= {\url{https://montevil.org/publications/articles/2016-SLM-Theoretical-Principle-Default-State/}},
   keywords	= {Default state, Theory, Organicism, Emergence, Mathematical
 		  symmetries, Biological organization},
   language	= {english},
