--- a/src/assets/bib/2016-SLN-Century-Organism.bib
+++ b/src/assets/bib/2016-SLN-Century-Organism.bib
@@ -14,6 +14,7 @@
   number	= {1},
   pages		= {1--82},
   volume	= {122},
+  note		= {\url{https://montevil.org/publications/books/2016-SLN-Century-Organism/}},
   abstract	= {This focused issue of Progress in Biophysics and Molecular
 		  Biology is entitled "From the century of the genome to the
 		  century of the organism: New theoretical approaches." It
