--- a/src/assets/bib/2016-Theory-Morphogenesis.bib
+++ b/src/assets/bib/2016-Theory-Morphogenesis.bib
@@ -29,6 +29,7 @@
 		  genes in particular.},
   doi		= {10.24019/jtavr.7},
   eprint	= {https://montevil.org/assets/pdf/2016-Theory-Morphogenesis.pdf},
+  note		= {\url{https://montevil.org/publications/articles/2016-Theory-Morphogenesis/}},
   keywords	= {Morphogenesis, extracellular matrix, theoretical
 		  principles, default state of cells, modelization.},
   language	= {english},
