--- a/src/assets/bib/2017-LM-Big-Data-Connaissance.bib
+++ b/src/assets/bib/2017-LM-Big-Data-Connaissance.bib
@@ -19,6 +19,7 @@
 		  urgent de développer une théorie des organismes.},
   booktitle	= {Sciences de la vie, sciences de l'information},
   eprint	= {https://montevil.org/assets/pdf/2017-LM-Big-Data-Connaissance.pdf},
+  note		= {\url{https://montevil.org/publications/chapters/2017-LM-Big-Data-Connaissance/}},
   language	= {french},
   pubstate	= {2017},
   url		= {https://www.istegroup.com/fr/produit/sciences-de-la-vie-sciences-de-linformation/}
