--- a/src/assets/bib/2017-LM-Comparing-Symmetries-Models.bib
+++ b/src/assets/bib/2017-LM-Comparing-Symmetries-Models.bib
@@ -26,6 +26,7 @@
   booktitle	= {Springer Handbook of Model-Based Science},
   doi		= {10.1007/978-3-319-30526-4},
   eprint	= {https://montevil.org/assets/pdf/2017-LM-Comparing-Symmetries-Models.pdf},
+  note		= {\url{https://montevil.org/publications/chapters/2017-LM-Comparing-Symmetries-Models/}},
   keywords	= {Phase Space, Symmetry Breaking, Chaotic Dynamic, Object
 		  Oriented Programming, Genetically Modify Organism},
   language	= {english},
