--- a/src/assets/bib/2017-MLS-Siecle-Organisme.bib
+++ b/src/assets/bib/2017-MLS-Siecle-Organisme.bib
@@ -1,6 +1,7 @@
 
 @InBook{	  2017-mls-siecle-organisme,
   eprint	= {https://montevil.org/assets/pdf/2017-MLS-Siecle-Organisme.pdf},
+  note		= {\url{https://montevil.org/publications/chapters/2017-MLS-Siecle-Organisme/}},
   author	= {Montévil, Maël and G. Longo and Ana M. Soto},
   editor	= {T. Gaudin and D. Lacroix and M.-C. Maurel and J.-C.
 		  Pomerol},
