--- a/src/assets/bib/2017-MP-Hitchhikers-Guide-Cancer.bib
+++ b/src/assets/bib/2017-MP-Hitchhikers-Guide-Cancer.bib
@@ -29,6 +29,7 @@
   copyright	= {Copyright (c) 2017 Maël Montévil, Arnaud Pocheville},
   doi		= {10.13133/2532-5876_2.9},
   eprint	= {https://montevil.org/assets/pdf/2017-MP-Hitchhikers-Guide-Cancer.pdf},
+  note		= {\url{https://montevil.org/publications/articles/2017-MP-Hitchhikers-Guide-Cancer/}},
   keywords	= {TOFT, reductionism, organicism, levels of organization,
 		  SMT},
   language	= {english},
