--- a/src/assets/bib/2017-Montevil-Garson-Functions.bib
+++ b/src/assets/bib/2017-Montevil-Garson-Functions.bib
@@ -7,8 +7,7 @@
   day		= {26},
   issn		= {1573-1901},
   month		= aug,
-  note		= {Book review of A Critical Overview of Biological
-		  Functions, Justin Garson (2016).},
+  note		= {\url{https://montevil.org/publications/varia/2017-Montevil-Garson-Functions/}},
   number	= {7-9},
   pages		= {1071--1073},
   volume	= {26},
