--- a/src/assets/bib/2018-GM-Repetition-Reversibilite.bib
+++ b/src/assets/bib/2018-GM-Repetition-Reversibilite.bib
@@ -34,6 +34,7 @@
   booktitle	= {Temps de la nature \& nature du temps. Études
 		  philosophiques sur le temps dans les sciences naturelles},
   eprint	= {https://montevil.org/assets/pdf/2018-GM-Repetition-Reversibilite.pdf},
+  note		= {\url{https://montevil.org/publications/chapters/2018-GM-Repetition-Reversibilite/}},
   keywords	= {génétique des populations, répétition, rétrodiction,
 		  réversibilité},
   language	= {french},
