--- a/src/assets/bib/2018-Montevil-Perspective-from-theory.bib
+++ b/src/assets/bib/2018-Montevil-Perspective-from-theory.bib
@@ -20,6 +20,7 @@
 		  biological randomness, which, I argue, require original
 		  developments.},
   eprint	= {https://montevil.org/assets/pdf/2018-Montevil-Perspective-from-theory.pdf},
+  note		= {\url{https://montevil.org/publications/varia/2018-Montevil-Perspective-from-theory/}},
   language	= {english},
   url		= {http://constructivist.info/13/3/377.montevil}
 }
