--- a/src/assets/bib/2019-LM-Extending-Criticality-Extended.bib
+++ b/src/assets/bib/2019-LM-Extending-Criticality-Extended.bib
@@ -33,6 +33,7 @@
   chapter	= {77},
   doi		= {10.14428/aes.v9i1.56043},
   eprint	= {https://montevil.org/assets/pdf/2019-LM-Extending-Criticality-Extended.pdf},
+  note		= {\url{https://montevil.org/publications/articles/2019-LM-Extending-Criticality-Extended/}},
   keywords	= {Coherent structures, Critical transitions, downward
 		  causation, Hidden variables, Levels of organization,
 		  Symmetries, Systems biology},
