--- a/src/assets/bib/2019-Montevil-Possibility-Spaces-Novelty.bib
+++ b/src/assets/bib/2019-Montevil-Possibility-Spaces-Novelty.bib
@@ -46,6 +46,7 @@
 		  possibilities is necessary for biology.},
   doi		= {10.1007/s11229-017-1668-5},
   eprint	= {https://montevil.org/assets/pdf/2019-Montevil-Possibility-Spaces-Novelty.pdf},
+  note		= {\url{https://montevil.org/publications/articles/2019-Montevil-Possibility-Spaces-Novelty/}},
   keywords	= {Novelty, Possibility space, Biological functions,
 		  Organization, Emergence},
   language	= {english},
