--- a/src/assets/bib/2019-Montevil-Varennes-Models.bib
+++ b/src/assets/bib/2019-Montevil-Varennes-Models.bib
@@ -23,5 +23,6 @@
 		  épistémologie, à travers le cas des simulations de
 		  morphogenèse d'arbres et plus généralement de plantes.},
   issue		= {2},
-  url		= {https://www.cairn.info/revue-d-histoire-des-sciences-2019-2-page-411.htm?contenu=article}
+  url		= {https://www.cairn.info/revue-d-histoire-des-sciences-2019-2-page-411.htm?contenu=article},
+  note		= {\url{https://montevil.org/publications/varia/2019-Montevil-Varennes-Models}}
 }
