--- a/src/assets/bib/2019-SM-Entretien-Entropie-1.bib
+++ b/src/assets/bib/2019-SM-Entretien-Entropie-1.bib
@@ -1,6 +1,7 @@
 
 @Article{	  2019-sm-entretien-entropie-1,
   eprint	= {https://montevil.org/assets/pdf/2019-SM-Entretien-Entropie-1.pdf},
+  note		= {\url{https://montevil.org/publications/articles/2019-SM-Entretien-Entropie-1/}},
   author	= {Stiegler, B. and Montévil, Maël},
   journal	= {Links series},
   title		= {Entretien sur l'entropie, le vivant et la technique :
