--- a/src/assets/bib/2020-MM-Identity-Organism.bib
+++ b/src/assets/bib/2020-MM-Identity-Organism.bib
@@ -40,6 +40,7 @@
 		  experiments.},
   doi		= {10.3389/fphys.2020.00611},
   eprint	= {https://montevil.org/assets/pdf/2020-MM-Identity-Organism.pdf},
+  note		= {\url{https://montevil.org/publications/articles/2020-MM-Identity-Organism/}},
   language	= {english},
   publisher	= {Frontiers Media {SA}}
 }
