--- a/src/assets/bib/2020-MSL-Anthropocene-Exosomatization-Negentropy.bib
+++ b/src/assets/bib/2020-MSL-Anthropocene-Exosomatization-Negentropy.bib
@@ -35,6 +35,7 @@
 		  of technical novelties.},
   booktitle	= {On transition : in response to Antonio Guterres},
   eprint	= {https://montevil.org/assets/pdf/2020-MSL-Anthropocene-Exosomatization-Negentropy.pdf},
+  note		= {\url{https://montevil.org/publications/chapters/2020-MSL-Anthropocene-Exosomatization-Negentropy/}},
   language	= {english},
   url		= {https://internation.world/}
 }
