--- a/src/assets/bib/2020-Montevil-CodeForDisruption.bib
+++ b/src/assets/bib/2020-Montevil-CodeForDisruption.bib
@@ -15,5 +15,6 @@
   doi		= {10.5281/zenodo.4290494},
   publisher	= {Zenodo},
   url		= {https://doi.org/10.5281/zenodo.4290494},
+  note		= {\url{https://montevil.org/publications/varia/2020-Montevil-CodeForDisruption/}},
   version	= {v0.51}
 }
