--- a/src/assets/bib/2021-Montevil-Stiegler-Sciences-Entropocene.bib
+++ b/src/assets/bib/2021-Montevil-Stiegler-Sciences-Entropocene.bib
@@ -31,7 +31,7 @@
 		  savoirs territoriaux.},
   doi		= {10.3917/ecorev.050.0109},
   eprint	= {https://montevil.org/assets/pdf/2021-Montevil-Stiegler-Sciences-Entropocene.pdf},
+  note		= {\url{https://montevil.org/publications/articles/2021-Montevil-Stiegler-Sciences-Entropocene/}},
   language	= {FR},
-  publisher	= {Association EcoRev'},
-  url		= {10.3917/ecorev.050.0109}
+  publisher	= {Association EcoRev'}
 }
