--- a/src/assets/bib/2021-Montevil-vaccines-germs-knowledge.bib
+++ b/src/assets/bib/2021-Montevil-vaccines-germs-knowledge.bib
@@ -18,5 +18,6 @@
 		  COVID-19 pandemic.},
   url		= {https://www.philosophy-world-democracy.org/vaccines-germs-and-knowledge},
   eprint	= {https://montevil.org/assets/pdf/2021-Montevil-vaccines-germs-knowledge.pdf},
+  note		= {\url{https://montevil.org/publications/articles/2021-Montevil-vaccines-germs-knowledge/}},
   keywords	= {epistemology, immunology, politics}
 }
