--- a/src/assets/bib/submitted-Montevil-Disruption-Phenology.bib
+++ b/src/assets/bib/submitted-Montevil-Disruption-Phenology.bib
@@ -34,5 +34,6 @@
 		  disruption in ecology. When a specific historical outcome
 		  contributes to a system's viability, disruption is the
 		  randomization of this outcome, decreasing this viability.
-		  }
+		  },
+  note		= {\url{https://montevil.org/publications/articles/submitted-Montevil-Disruption-Phenology/}}
 }
