--- a/src/assets/bib/2012-LM-Inert-Vs-Living.bib
+++ b/src/assets/bib/2012-LM-Inert-Vs-Living.bib
@@ -24,6 +24,7 @@
 		  throughout.},
   doi		= {10.3389/fphys.2012.00039},
   eprint	= {https://montevil.org/assets/pdf/2012-LM-Inert-Vs-Living.pdf},
+  note		= {\url{https://montevil.org/publications/articles/2012-LM-Inert-Vs-Living/}},
   keywords	= {criticality, biological time, anti-entropy, theoretical
 		  biology, symmetry, allometry, incompleteness},
   language	= {english},
