--- a/src/assets/bib/2012-LMP-Levels-Organization-Criticality.bib
+++ b/src/assets/bib/2012-LMP-Levels-Organization-Criticality.bib
@@ -8,7 +8,7 @@
   day		= {17},
   issn		= {1664-042X},
   month		= jul,
-  note		= {invited paper},
+  note		= {\url{https://montevil.org/publications/articles/2012-LMP-Levels-Organization-Criticality/}},
   number	= {232},
   volume	= {3},
   abstract	= {Biological thinking is structured by the notion of level
