--- a/src/assets/bib/2013-LM-Extended-Criticality-Enablement.bib
+++ b/src/assets/bib/2013-LM-Extended-Criticality-Enablement.bib
@@ -32,6 +32,7 @@
 		  organisms.},
   doi		= {10.1016/j.chaos.2013.03.008},
   eprint	= {https://montevil.org/assets/pdf/2013-LM-Extended-Criticality-Enablement.pdf},
+  note		= {\url{https://montevil.org/publications/articles/2013-LM-Extended-Criticality-Enablement/}},
   keywords	= {Conservation properties, symmetries, biological causality,
 		  phase space, unpredictability, phylogenetic drift,
 		  enablement},
