--- a/src/assets/bib/2014-BSQ-Tissues-Collagen-Time.bib
+++ b/src/assets/bib/2014-BSQ-Tissues-Collagen-Time.bib
@@ -51,6 +51,7 @@
   doi		= {10.1371/journal.pone.0093325},
   editor	= {Christophe Egles},
   eprint	= {https://montevil.org/assets/pdf/2014-BSQ-Tissues-Collagen-Time.pdf},
+  note		= {\url{https://montevil.org/publications/articles/2014-BSQ-Tissues-Collagen-Time/}},
   keywords	= {Collagens, Morphogenesis, Extracellular matrix, Gels,
 		  Anisotropy, Stiffness, Scanning electron microscopy,
 		  Mammary gland development},
