--- a/src/assets/bib/2015-LMS-Search-Principles-Organisms.bib
+++ b/src/assets/bib/2015-LMS-Search-Principles-Organisms.bib
@@ -8,7 +8,7 @@
   day		= {1},
   issn		= {0973-7138},
   month		= {Dec},
-  note		= {26648040[pmid]},
+  note		= {\url{https://montevil.org/publications/articles/2015-LMS-Search-Principles-Organisms/}},
   number	= {5},
   pages		= {955--968},
   volume	= {40},
