--- a/src/assets/bib/2015-MM-Organisation-Closure-Constraints.bib
+++ b/src/assets/bib/2015-MM-Organisation-Closure-Constraints.bib
@@ -28,6 +28,7 @@
 		  from this framework.},
   doi		= {10.1016/j.jtbi.2015.02.029},
   eprint	= {https://montevil.org/assets/pdf/2015-MM-Organisation-Closure-Constraints.pdf},
+  note		= {\url{https://montevil.org/publications/articles/2015-MM-Organisation-Closure-Constraints/}},
   keywords	= {Biological organisation, Closure, Constraints, Symmetries,
 		  Time scales},
   language	= {english},
