--- a/src/assets/bib/2015-Montevil-Symetrie-Objectivation-Vivant.bib
+++ b/src/assets/bib/2015-Montevil-Symetrie-Objectivation-Vivant.bib
@@ -40,6 +40,7 @@
 		  symétries fondamentales de la physique.},
   booktitle	= {Le vivant critique et chaotique},
   eprint	= {https://montevil.org/assets/pdf/2015-Montevil-Symetrie-Objectivation-Vivant.pdf},
+  note		= {\url{https://montevil.org/publications/chapters/2015-Montevil-Symetrie-Objectivation-Vivant/}},
   language	= {french},
   organization	= {Editions Materiologiques},
   url		= {https://materiologiques.com/fr/modelisations-simulations-systemes-complexes-2425-5661/206-le-vivant-critique-et-chaotique-9782919694938.html}
