--- a/src/assets/bib/2016-MSS-Modeling-Organogenesis-Principles.bib
+++ b/src/assets/bib/2016-MSS-Modeling-Organogenesis-Principles.bib
@@ -55,6 +55,7 @@
 		  perspective we embrace.},
   doi		= {10.1016/j.pbiomolbio.2016.08.004},
   eprint	= {https://montevil.org/assets/pdf/2016-MSS-Modeling-Organogenesis-Principles.pdf},
+  note		= {\url{https://montevil.org/publications/articles/2016-MSS-Modeling-Organogenesis-Principles/}},
   keywords	= {Ductal morphogenesis, Mathematical models, Organicism,
 		  Organizational closure, Acinar morphogenesis, Mammary gland
 		  morphogenesis},
