--- a/src/assets/bib/2016-SLN-Conclusion-Century-Organism.bib
+++ b/src/assets/bib/2016-SLN-Conclusion-Century-Organism.bib
@@ -28,6 +28,7 @@
 		  biologically proper principles.},
   doi		= {10.1016/j.pbiomolbio.2016.07.006},
   eprint	= {https://montevil.org/assets/pdf/2016-SLN-Conclusion-Century-Organism.pdf},
+  note		= {\url{https://montevil.org/publications/articles/2016-SLN-Conclusion-Century-Organism/}},
   keywords	= {Default state, Biological organization, Organizational
 		  closure, Variation, Individuation},
   publisher	= {Elsevier {BV}}
