--- a/src/assets/bib/2017-GM-Repetition-Reversibility-Evolution.bib
+++ b/src/assets/bib/2017-GM-Repetition-Reversibility-Evolution.bib
@@ -35,6 +35,7 @@
 		  Perspectives of Time in Natural Sciences},
   doi		= {10.1007/978-3-319-53725-2_13},
   eprint	= {https://montevil.org/assets/pdf/2017-GM-Repetition-Reversibility-Evolution.pdf},
+  note		= {\url{https://montevil.org/publications/chapters/2017-GM-Repetition-Reversibility-Evolution/}},
   keywords	= {population genetics, repetition, retrodiction,
 		  reversibility},
   language	= {english}
