--- a/src/assets/bib/2018-Montevil-Primer-Mathematical-Modeling.bib
+++ b/src/assets/bib/2018-Montevil-Primer-Mathematical-Modeling.bib
@@ -27,6 +27,7 @@
   booktitle	= {Systems Biology},
   doi		= {10.1007/978-1-4939-7456-6_4},
   eprint	= {https://montevil.org/assets/pdf/2018-Montevil-Primer-Mathematical-Modeling.pdf},
+  note		= {\url{https://montevil.org/publications/chapters/2018-Montevil-Primer-Mathematical-Modeling/}},
   keywords	= {Equations, Mathematical modeling, Parameters,
 		  Proliferation, Theory},
   language	= {english}
