--- a/src/assets/bib/2020-MAS-Morphometric-Clarity-Bpa.bib
+++ b/src/assets/bib/2020-MAS-Morphometric-Clarity-Bpa.bib
@@ -29,6 +29,7 @@
 		  animals at the lowest BPA dose tested.},
   doi		= {10.1289/EHP6301},
   eprint	= {https://montevil.org/assets/pdf/2020-MAS-Morphometric-Clarity-Bpa.pdf},
+  note		= {\url{https://montevil.org/publications/articles/2020-MAS-Morphometric-Clarity-Bpa/}},
   language	= {english},
   publisher	= {Environmental Health Perspectives}
 }
