--- a/src/assets/bib/2020-MSL-Anthropocene-Exosomatisation-Negentropie.bib
+++ b/src/assets/bib/2020-MSL-Anthropocene-Exosomatisation-Negentropie.bib
@@ -48,6 +48,7 @@
 		  limiter les effets négatifs des nouveautés techniques.},
   booktitle	= {Bifurquer. Il n'y a pas d'alternative},
   eprint	= {https://montevil.org/assets/pdf/2020-MSL-Anthropocene-Exosomatisation-Negentropie.pdf},
+  note		= {\url{https://montevil.org/publications/chapters/2020-MSL-Anthropocene-Exosomatisation-Negentropie/}},
   language	= {french},
   url		= {http://www.editionslesliensquiliberent.fr/livre-Bifurquer-609-1-1-0-1.html}
 }
