--- a/src/assets/bib/2021-Montevil-Entropies-Anthropocene.bib
+++ b/src/assets/bib/2021-Montevil-Entropies-Anthropocene.bib
@@ -1,12 +1,12 @@
 
 @Article{	  2021-montevil-entropies-anthropocene,
   eprint	= {https://montevil.org/assets/pdf/2021-Montevil-Entropies-Anthropocene.pdf},
-  url		= {https://montevil.org/publications/articles/2021-Montevil-Entropies-Anthropocene/},
+  note		= {\url{https://montevil.org/publications/articles/2021-Montevil-Entropies-Anthropocene/}},
   author	= {Montévil, Maël},
   journal	= {{AI} and society},
   title		= {Entropies and the Anthropocene crisis},
   language	= {english},
-  year		= {In press},
+  year		= {2021},
   abstract	= { The Anthropocene crisis is frequently described as the
 		  rarefaction of resources or resources per capita. However,
 		  both energy and minerals correspond to fundamentally
@@ -29,5 +29,8 @@
 		  produce functional novelties, that is, to produce
 		  anti-entropy. },
   keywords	= {entropy, anti-entropy, resources, organization,
-		  disruption, Anthropocene}
+		  disruption, Anthropocene},
+  month		= {5},
+  day		= {15},
+  doi		= {10.1007/s00146-021-01221-0}
 }
