--- a/src/assets/bib/2021-Montevil-Theory-Accuracy-Medicine.bib
+++ b/src/assets/bib/2021-Montevil-Theory-Accuracy-Medicine.bib
@@ -1,6 +1,7 @@
 
 @InBook{	  2021-montevil-theory-accuracy-medicine,
   eprint	= {https://montevil.org/assets/pdf/2021-Montevil-Theory-Accuracy-Medicine.pdf},
+  note		= {\url{https://montevil.org/publications/chapters/2021-Montevil-Theory-Accuracy-Medicine/}},
   author	= {Ma{\"e}l Mont{\'e}vil},
   publisher	= {Springer},
   title		= {Conceptual and theoretical specifications for accuracy in
