--- a/src/assets/bib/bibM.bib
+++ b/src/assets/bib/bibM.bib
@@ -13,6 +13,18 @@
   keywords  = {epistemology, immunology, politics}
 }
 
+
+@article{2021-Montevil-Bernard-Stiegler,
+author="Montévil, Maël",
+title="Bernard Stiegler (1952-2020)",
+journal="LINKS Series",
+year="2021",
+page = "6",
+url={http://links-series.com/n-5-6-marcel-proust/},
+  eprint    = {https://montevil.org/assets/pdf/2021-Montevil-Bernard-Stiegler.pdf},
+ note    = {\url{https://montevil.org/publications/varia/2021-Montevil-Bernard-Stiegler/}}
+}
+
 @article{submitted-Montevil-Disruption-Phenology,
 author = {Montévil, Maël},
 title = {Disruption of biological processes in the Anthropocene: the case of phenological mismatch},
