--- a/BIB/bibM.bib
+++ b/BIB/bibM.bib
@@ -410,9 +410,12 @@ Avec Darwin, les êtres vivants sont devenus partie intégrante d'un processus h
   publisher= {NAIMA},
   title= {Le sens des formes en biologie},
   language={french},
-  year= {Submitted},
+  year= {2021},
   abstract= {Dans l'interface entre biologie et mathématiques, les formes et les processus de morphogenèse sont souvent étudiées pour eux-mêmes. Nous pensons que cette manière de procéder est insuffisante pour capturer le sens biologique de ces formes. La biologie comporte des spécificités qui se manifestent tant sur le plan philosophique que sur celui des principes théoriques : en particulier, tout processus biologique tel qu’un processus de morphogenèse ou une régulation physiologique (i) s’inscrit dans l’évolution et dans une histoire naturelle et (ii) s’intègre dans un organisme dont il dépend et auquel il participe. Nous aborderons alors le sens des formes biologiques à l'aune de ces principes, tant au niveau de la théorie qu'au niveau de la compréhension de l'accès expérimental aux objets biologiques.},
-  booktitle= {Biomorphisme},
+  booktitle= {Biomorphisme. Approches sensibles et conceptuelles des formes du vivant},
+  page={514-553},
+  editor={David Romand and Julien Bernard and Sylvie Pic and Jean Arnaud},
+  url={https://www.naimaunlimited.com/biblio/biomorphisme-approches-sensibles-et-conceptuelles-des-formes-du-vivant/}
 }
 
 @Article{2017-MP-Hitchhikers-Guide-Cancer,
