--- a/src/assets/bib/bibM.bib
+++ b/src/assets/bib/bibM.bib
@@ -1,3 +1,21 @@
+
+
+@InBook{2021-Montevil-Informatique-theorique-Stiegler,
+   eprint={https://montevil.org/assets/pdf/2021-Montevil-Informatique-theorique-Stiegler.pdf},
+    note    = {\url{https://montevil.org/publications/chapters/2021-Montevil-Informatique-theorique-Stiegler/}},
+  author= {Ma{\"e}l Mont{\'e}vil},
+  publisher= {Fip},
+  title= {Il faut qu'il y ait en informatique théorique un symbole tel qu'il empêche de calculer},
+  language  = {FR},
+  year= {In Press},
+  abstract= {Pour progresser sur la question du rapport entre l’informatique et le calculable, je propose de réinterpréter l’objet de l’informatique théorique puis de faire un détour par la biologie théorique où la question d’un symbole qui empêche de calculer se pose. Enfin, je reviens vers l’informatique en transférant de manière critique certains concepts issus de mes travaux en biologie théorique. },
+  editor={Anne Alombert and Victor Chaix and Maël Montévil},
+  booktitle= {Prendre Soin de l’informatique et Des Générations}
+}
+
+
+
+
 % Encoding: UTF-8
 @Article{2021-Montevil-vaccines-germs-knowledge,
   author    = {M. Montevil},
