--- a/BIB/bibM.bib
+++ b/BIB/bibM.bib
@@ -1,5 +1,20 @@
 
 
+@Article{2021-Montevil-episteme-computational-empiricism,
+  author    = {M. Montevil},
+  journal   = {Philosophy World Democracy},
+  title     = {Computational empiricism : the reigning épistémè of the sciences},
+  year      = {2021},
+  day       = {31},
+  month     = jul,
+  abstract  = {What do mainstream scientists acknowledge as original scientific contributions? In other words, what is the current épistémè in natural sciences? This essay attempts to characterize this épistémè as computational empiricism. Scientific works are primarily empirical, generating data and computational, to analyze them and reproduce them with models. This épistémè values primarily the investigation of specific phenomena and thus leads to the fragmentation of sciences. It also promotes attention-catching results showing limits of earlier theories. However, it consumes these theories since it does not renew them, leading more and more fields to be in a state of theory disruption.},
+  url       = {https://www.philosophy-world-democracy.org/computational-empiricism},
+  eprint    = {https://montevil.org/assets/pdf/2021-Montevil-vaccines-germs-knowledge.pdf},
+ note    = {\url{https://montevil.org/publications/articles/2021-Montevil-vaccines-germs-knowledge/}},
+  keywords  = {theory, statistical tests, empiricism, models, computation}
+}
+
+
 @InBook{2021-Montevil-Informatique-theorique-Stiegler,
    eprint={https://montevil.org/assets/pdf/2021-Montevil-Informatique-theorique-Stiegler.pdf},
     note    = {\url{https://montevil.org/publications/chapters/2021-Montevil-Informatique-theorique-Stiegler/}},
