--- a/src/assets/bib/2021-Montevil-Informatique-theorique-Stiegler.bib
+++ b/src/assets/bib/2021-Montevil-Informatique-theorique-Stiegler.bib
@@ -7,7 +7,9 @@
   title		= {Il faut qu'il y ait en informatique théorique un symbole
 		  tel qu'il empêche de calculer},
   language	= {FR},
-  year		= {In Press},
+  year		= {2021},
+  day		= {19},
+  month		= nov,
   abstract	= {Pour progresser sur la question du rapport entre
 		  l’informatique et le calculable, je propose de
 		  réinterpréter l’objet de l’informatique théorique
@@ -16,6 +18,8 @@
 		  Enfin, je reviens vers l’informatique en transférant de
 		  manière critique certains concepts issus de mes travaux en
 		  biologie théorique. },
-  editor	= {Anne Alombert and Victor Chaix and Maël Montévil},
-  booktitle	= {Prendre Soin de l’informatique et Des Générations}
+  editor	= {Anne Alombert and Victor Chaix and Maël Montévil and
+		  Vincent Puig},
+  booktitle	= {Prendre Soin de l’informatique et Des Générations},
+  url		= {https://www.fypeditions.com/prendre-soin-de-linformatique-et-des-generations-hommage-a-bernard-stiegler/}
 }
