--- a/src/assets/bib/bibM.bib
+++ b/src/assets/bib/bibM.bib
@@ -22,13 +22,28 @@
   publisher= {Fip},
   title= {Il faut qu'il y ait en informatique théorique un symbole tel qu'il empêche de calculer},
   language  = {FR},
-  year= {In Press},
+  year= {2021},
+    day       = {19},
+      month     = nov,
   abstract= {Pour progresser sur la question du rapport entre l’informatique et le calculable, je propose de réinterpréter l’objet de l’informatique théorique puis de faire un détour par la biologie théorique où la question d’un symbole qui empêche de calculer se pose. Enfin, je reviens vers l’informatique en transférant de manière critique certains concepts issus de mes travaux en biologie théorique. },
-  editor={Anne Alombert and Victor Chaix and Maël Montévil},
-  booktitle= {Prendre Soin de l’informatique et Des Générations}
+  editor={Anne Alombert and Victor Chaix and Maël Montévil and Vincent Puig},
+  booktitle= {Prendre Soin de l’informatique et Des Générations},
+  url={https://www.fypeditions.com/prendre-soin-de-linformatique-et-des-generations-hommage-a-bernard-stiegler/}
 }
 
-
+@Book{2021-ACM-Informatique-theorique-Stiegler,
+  publisher= {Fip},
+  language  = {FR},
+  year= {2021},
+    day       = {19},
+      month     = nov,
+  abstract= {Lorsque les technologies numériques sont mises au service de l’économie des données, leur design et leur fonctionnement exploitent les attentions, afin d’orienter, voire de contrôler, les comportements des utilisateurs. Réduits à un ensemble de processus cognitifs et de réactions réflexes, ils se voient dépossédés de leurs savoirs, alors même que, dans nos sociétés en situation de crise sanitaire, sociale, politique et écologique, le partage et la transmission des savoir-faire, des savoir-vivre et des savoir-penser sont plus que jamais nécessaires.
+     <br>
+Comment concevoir et réaliser des plateformes numériques au service des relations sociales et intergénérationnelles, aujourd’hui menacées par les applications addictives et l’économie des données ? Comment intégrer dans les dispositifs computationnels des fonctions délibératives et interprétatives ? Comment transformer les technologies numériques en supports de mémoire et de savoirs ? Comment mettre les algorithmes au service de l’intelligence collective ? En un mot, comment prendre soin de l’informatique pour les générations actuelles et à venir ? Ce livre interroge la manière dont les supports techniques configurent nos capacités psychiques et nos relations collectives, et propose des solutions pour concevoir de nouveaux dispositifs et de nouvelles pratiques, afin de mettre les technologies numériques au service de la production et de la transmission de savoirs, ainsi que des liens entre les générations.},
+  author={Anne Alombert and Victor Chaix and Maël Montévil and Vincent Puig},
+  title= {Prendre Soin de l’informatique et Des Générations},
+  url={https://www.fypeditions.com/prendre-soin-de-linformatique-et-des-generations-hommage-a-bernard-stiegler/}
+}
 
 
 % Encoding: UTF-8
