--- a/BIB/bibM.bib
+++ b/BIB/bibM.bib
@@ -226,6 +226,9 @@ general and genes in particular.},
   language  = {english},
   publisher = {Springer Science and Business Media {LLC}},
 }
+
+
+
 @Article{2021-Montevil-Entropies-Anthropocene,
    eprint={https://montevil.org/assets/pdf/2021-Montevil-Entropies-Anthropocene.pdf},
    note={\url{https://montevil.org/publications/articles/2021-Montevil-Entropies-Anthropocene/}},
@@ -244,6 +247,22 @@ However, the physics concept of entropy is insufficient to understand biological
   day={15},
   doi={10.1007/s00146-021-01221-0}
 }
+
+@Book{2021-Internation-Bifurcate,
+  author    = {Bernard Stiegler and {Internation Collective} and Daniel Ross},
+  year      = {2021},
+  month     = dec,
+    day={31},
+  abstract  = {Bifurcating means: reconstituting a political economy that reconnects local knowledge and practices with macroeconomic circulation and rethinks territoriality at its different scales of locality; developing an economy of contribution on the basis of a contributory income no longer tied to employment and once again valuing work as a knowledge activity; overhauling law, and government and corporate accounting, via economic and social experiments, including in laboratory territories, and in relation to cooperative, local market economies formed into networks and linked to international trade; revaluing research from a long-term perspective, independent of the short-term interests of political and economic powers; reorienting digital technology in the service of territories and territorial cooperation.
+<br>
+The collective work that produced this book is based on the claim that today’s destructive development model is reaching its ultimate limits, and that its toxicity, which is increasingly massive, manifest and multidimensional (medical, environmental, mental, epistemological, economic – accumulating pockets of insolvency, which become veritable oceans), is generated above all by the fact that the current industrial economy is based in every sector on an obsolete physical model – a mechanism that ignores the constraints of locality in biology and the entropic tendency in reticulated computational information. In these gravely perilous times, we must bifurcate: there is no alternative. 
+  },
+title = {Bifurcate: There Is No Alternative},
+  language  = {english},
+  url       = {http://www.openhumanitiespress.org/books/titles/bifurcate/}
+}
+
+
 
 @InBook{2020-MSL-Anthropocene-Exosomatization-Negentropy,
   author    = {Maël Montévil and Bernard Stiegler and Giuseppe Longo and Ana M. Soto and Carlos Sonnenschein},
