--- a/src/assets/bib/2021-Montevil-Theory-Accuracy-Medicine.bib
+++ b/src/assets/bib/2021-Montevil-Theory-Accuracy-Medicine.bib
@@ -7,7 +7,7 @@
   title		= {Conceptual and theoretical specifications for accuracy in
 		  medicine},
   language	= {english},
-  year		= {In Press},
+  year		= {2022},
   abstract	= {Technological developments in genomics and other -omics
 		  originated the idea that precise measurements would lead to
 		  better therapeutic strategies. However, precision does not
