--- a/src/assets/bib/bibM.bib
+++ b/src/assets/bib/bibM.bib
@@ -185,7 +185,8 @@ general and genes in particular.},
   publisher= {Springer},
   series={Human Perspectives in Health Sciences and Technology},
   url={https://www.springer.com/gp/book/9783030748036},
-  isbn={9783030748036}
+  isbn={9783030748036},
+  year={2022}
 }
 
 @Article{2021-Montevil-Stiegler-Sciences-Entropocene,
