--- a/src/assets/bib/2021-Montevil-episteme-computational-empiricism.bib
+++ b/src/assets/bib/2021-Montevil-episteme-computational-empiricism.bib
@@ -20,7 +20,7 @@
 		  theories. However, it consumes these theories since it does
 		  not renew them, leading more and more fields to be in a
 		  state of theory disruption.},
-  url		= {https://www.philosophy-world-democracy.org/computational-empiricism},
+  url		= {https://hal.archives-ouvertes.fr/hal-03574022},
   eprint	= {https://montevil.org/assets/pdf/2021-Montevil-episteme-computational-empiricism.pdf},
   note		= {\url{https://montevil.org/publications/articles/2021-Montevil-episteme-computational-empiricism/}},
   keywords	= {theory, statistical tests, empiricism, models,
