--- a/src/assets/bib/bibM.bib
+++ b/src/assets/bib/bibM.bib
@@ -11,7 +11,8 @@
   url       = {https://www.philosophy-world-democracy.org/computational-empiricism},
   eprint    = {https://montevil.org/assets/pdf/2021-Montevil-episteme-computational-empiricism.pdf},
  note    = {\url{https://montevil.org/publications/articles/2021-Montevil-episteme-computational-empiricism/}},
-  keywords  = {theory, statistical tests, empiricism, models, computation}
+  keywords  = {theory, statistical tests, empiricism, models, computation},
+  url={https://hal.archives-ouvertes.fr/hal-03574022}
 }
 
 
