--- a/src/assets/bib/2021-Montevil-Theory-Accuracy-Medicine.bib
+++ b/src/assets/bib/2021-Montevil-Theory-Accuracy-Medicine.bib
@@ -1,13 +1,9 @@
 
 @InBook{	  2021-montevil-theory-accuracy-medicine,
-  eprint	= {https://montevil.org/assets/pdf/2021-Montevil-Theory-Accuracy-Medicine.pdf},
-  note		= {\url{https://montevil.org/publications/chapters/2021-Montevil-Theory-Accuracy-Medicine/}},
   author	= {Ma{\"e}l Mont{\'e}vil},
-  publisher	= {Springer},
-  title		= {Conceptual and theoretical specifications for accuracy in
-		  medicine},
+  title		= "Conceptual and Theoretical Specifications for Accuracy in
+		  Medicine",
   language	= {english},
-  year		= {2022},
   abstract	= {Technological developments in genomics and other -omics
 		  originated the idea that precise measurements would lead to
 		  better therapeutic strategies. However, precision does not
@@ -38,7 +34,13 @@
 		  Perspectives from Biology to Healthcare},
   keywords	= {Normativity, Organization, Personalized Medicine,
 		  Technology, theoretical biology},
+  publisher	= "Springer International Publishing",
   series	= {Human Perspectives in Health Sciences and Technology},
-  url		= {https://www.springer.com/gp/book/9783030748036},
-  isbn		= {9783030748036}
+  isbn		= "978-3-030-74804-3",
+  doi		= "10.1007/978-3-030-74804-3_3",
+  url		= "https://doi.org/10.1007/978-3-030-74804-3_3",
+  year		= {2022},
+  day		= {8},
+  month		= {mar},
+  pages		= "47--62"
 }
