--- a/src/assets/bib/submitted-Montevil-Disruption-Phenology.bib
+++ b/src/assets/bib/submitted-Montevil-Disruption-Phenology.bib
@@ -35,5 +35,5 @@
 		  contributes to a system's viability, disruption is the
 		  randomization of this outcome, decreasing this viability.
 		  },
-  note		= {\url{https://montevil.org/publications/articles/submitted-Montevil-Disruption-Phenology/}}
+  url		= {https://hal.archives-ouvertes.fr/hal-03574022}
 }
