--- a/src/assets/bib/bibM.bib
+++ b/src/assets/bib/bibM.bib
@@ -1,3 +1,15 @@
+@Article{2022-Montevil-identite-begining-philosophy,
+  author    = {M. Montévil},
+  journal   = {Philosophy World Democracy},
+  title     = {Penser au-delà de l’identité : philosophie et sciences},
+  year      = {2022},
+  day       = {30},
+  month     = jun,
+  abstract  = {Ce texte est le séminaire public donné le 31 mai à l'École Normale Supérieure de Paris. Les sciences se sont écartées de la philosophie. Si la philosophie est entrée en stasis et se porte vers un nécessaire Autre Commencement de la Philosophie, alors les sciences aussi sont à un autre commencement. L'Anastasis des sciences exige une enquête sur la persistance des concepts théologiques en leur sein et en même temps la découverte de nouveaux principes par lesquels les sciences peuvent recommencer de telle manière qu'elles soient libérées des fardeaux métaphysiques. Les homologies d'un autre commencement des sciences sont déjà visibles dans les crises conceptuelles, y compris dans les concepts de singularité en physique et d'immunité en biologie. Pour commencer à nouveau, une épistémologie bâtarde est proposée comme nouveau rapport entre les sciences et la famille bâtarde de la déconstruction.},
+  url       = {https://www.philosophy-world-democracy.org/other-beginning/penser-au-dela-de-lidentite-philosophie-et-sciences},
+    language  = {FR}
+}
+
 
 
 @Article{2022-Montevil-uncomputable-living-computers,
