--- a/src/assets/bib/bibM.bib
+++ b/src/assets/bib/bibM.bib
@@ -3,13 +3,24 @@
   title= {How does randomness shape the living?},
   language  = {en},
   year= {2023},
-  booktitle= {Figures of Chance},
+  booktitle= {Figuring Chance: Questions of Theory},
 editor={Anne Duprat and others},
 abstract={Physics has several concepts of randomness that build on the idea that the possibilities are pre-given. By contrast, an increasing number of theoretical biologists attempt to introduce new possibilities, that is to say, changes of possibility space – an idea already discussed by Bergson and that was not genuinely pursued scientifically until recently (except, in a sense, in systematics, i.e, the method to classify living beings). 
 <br>
-Then, randomness operates at the level of possibilities themselves and is the basis of the historicity of biological objects. We emphasize that this concept of randomness is not only relevant when aiming to predict the future. Instead, it shapes biological organizations and ecosystems. As an illustration, we argue that a critical issue of the Anthropocene is the disruption of the biological organizations that natural history has shaped, leading to a collapse of biological possibilities.}
+Then, randomness operates at the level of possibilities themselves and is the basis of the historicity of biological objects. We emphasize that this concept of randomness is not only relevant when aiming to predict the future. Instead, it shapes biological organizations and ecosystems. As an illustration, we argue that a critical issue of the Anthropocene is the disruption of the biological organizations that natural history has shaped, leading to a collapse of biological possibilities.},
+publisher={Routledge}
 }
-
+@InBook{2023-Montevil-chance-hasard-biologie,
+  author= {Ma{\"e}l Mont{\'e}vil},
+  title= {Comment le hasard façonne le vivant ?},
+  language  = {en},
+  year= {2023},
+  booktitle= {Figurer le hasard : questions de théorie},
+editor={Anne Duprat and others},
+abstract={La physique possède plusieurs concepts de hasard qui reposent néanmoins tous sur l’idée que les possibilités sont données d’avance. En revanche, un nombre croissant de biologistes théoriciens cherchent à introduire la notion de nouvelles possibilités, c’est-à-dire des modifications de l’espace des possibles - une idée déjà discutée par Bergson et qui n’a pas été véritablement poursuivie scientifiquement jusqu’à récemment (sauf, en un sens, dans la systématique, c’est-à-dire la méthode de classification des êtres vivants). 
+Alors, le hasard opère au niveau des possibilités elles-mêmes et est à la base de l’historicité des objets biologiques. Nous soulignons que ce concept de hasard n’est pas seulement pertinent lorsqu’on cherche à prédire l’avenir. Au contraire, il façonne les organisations biologiques et les écosystèmes. À titre d’illustration, nous soutenons qu’une question cruciale de l’Anthropocène est la disruption des organisations biologiques que l’histoire naturelle a structurées, conduisant à un effondrement des possibilités biologiques. },
+publisher={Éditions CNRS}
+}
 
 
 
