--- a/BIB/bibM.bib
+++ b/BIB/bibM.bib
@@ -101,7 +101,7 @@ Here we discuss the application and articulation of these principles for mathema
   year= {2022},
     day       = {01},
       month     = jan,
-  abstract= {La révolution contributive résulte du passage rapide à une conception dominante des systèmes (techniques, sociaux, organisationnels, culturels, etc.) où chacun des composants des systèmes co-élabore la performance du tout, en dehors de tout pilotage et contrôle centralisé et extérieur au système. Elle réinvente fondamentalement la relation sujetobjet.
+  abstract= {La révolution contributive résulte du passage rapide à une conception dominante des systèmes (techniques, sociaux, organisationnels, culturels, etc.) où chacun des composants des systèmes co-élabore la performance du tout, en dehors de tout pilotage et contrôle centralisé et extérieur au système. Elle réinvente fondamentalement la relation sujet-objet.
 
 La révolution contributive en cours est globale et profonde. Elle apparaît comme une solution possible à la crise économique, écologique et politique qui frappe les sociétés contemporaines, elle concerne tout le champ épistémologique, des sciences jusqu’aux organisations sociales (épistémè).},
   editor={Pierre Giorgini},
