--- a/src/assets/bib/2022-Postface-Giorgini.bib
+++ b/src/assets/bib/2022-Postface-Giorgini.bib
@@ -14,7 +14,7 @@
 		  composants des systèmes co-élabore la performance du
 		  tout, en dehors de tout pilotage et contrôle centralisé
 		  et extérieur au système. Elle réinvente fondamentalement
-		  la relation sujetobjet.
+		  la relation sujet-objet.
 		  
 		  La révolution contributive en cours est globale et
 		  profonde. Elle apparaît comme une solution possible à la
