--- a/src/assets/bib/2023-MS-organisation-modeling-principles.bib
+++ b/src/assets/bib/2023-MS-organisation-modeling-principles.bib
@@ -5,6 +5,8 @@
   title		= {Modeling organogenesis from biological first principles},
   language	= {en},
   year		= {2023},
+  month		= {12},
+  day		= {17},
   abstract	= {Unlike inert objects, organisms and their cells have the
 		  ability to initiate activity by themselves, and thus change
 		  their properties or states even in the absence of an
@@ -48,5 +50,7 @@
   editor	= {Matteo Mossio},
   booktitle	= {Organization in Biology: Foundational Enquiries into a
 		  Scientific Blindspot},
-  collection	= {History, Philosophy and Theory of the Life Sciences}
+  collection	= {History, Philosophy and Theory of the Life Sciences},
+  url		= {https://link.springer.com/book/9783031389672},
+  isbn		= {9783031389672}
 }
