--- a/src/assets/bib/2023-Montevil-Mathematical-Modeling-organisms.bib
+++ b/src/assets/bib/2023-Montevil-Mathematical-Modeling-organisms.bib
@@ -4,7 +4,9 @@
   editor	= {Bizzarri, Mariano},
   title		= {Mathematical modeling in the study of organisms and their
 		  parts},
-  year		= {to appear},
+  year		= {2024},
+  month		= {01},
+  day		= {26},
   series	= {Methods in Molecular Biology},
   abstract	= {Mathematical modeling is a very powerful tool to
 		  understand natural phenomena. Such a tool carries its own
@@ -21,5 +23,7 @@
   booktitle	= {Systems Biology 2nd edition},
   keywords	= {Equations, Mathematical modeling, Parameters,
 		  Proliferation, Theory},
-  language	= {en}
+  language	= {en},
+  url		= {https://link.springer.com/book/9781071635766},
+  isbn		= {9781071635766}
 }
