--- a/src/assets/bib/2023-Montevil-Stiegler-memory-future.bib
+++ b/src/assets/bib/2023-Montevil-Stiegler-memory-future.bib
@@ -3,7 +3,9 @@
   author	= {Ma{\"e}l Mont{\'e}vil},
   title		= {Plaine Commune, contributive learning territory},
   language	= {en},
-  year		= {2023},
+  year		= {2024},
+  month		= {01},
+  day		= {25},
   booktitle	= {Memories for the Future: Thinking with Bernard Stiegler},
   editor	= {Bart Buseyne and Georgios Tsagdis and Paul Willemarck},
   abstract	= {The program Plaine Commune, contributive learning
@@ -18,5 +20,8 @@
 		  context of the overuse of digital media. Here, we focus on
 		  the group on digital media and young children’s
 		  development and how academics and inhabitant works
-		  integrate.}
+		  integrate.},
+  url		= {https://www.bloomsbury.com/uk/bernard-stiegler-9781350410459/},
+  publisher	= {Bloomsbury},
+  isbn		= {9781350410442}
 }
