--- a/BIB/bibM.bib
+++ b/BIB/bibM.bib
@@ -1,13 +1,79 @@
+@Book{2023-DMM-Castes-Politics,
+  publisher= { C Hurst & Co Publishers Ltd},
+  language  = {en},
+  year= {2024},
+    day       = {8},
+      month     = 2,
+  abstract= {
+In their brave and challenging book, grounded in political science and the Continental philosophical tradition, Divya Dwivedi and Shaj Mohan engage with the resurgence of upper-caste supremacism in India and its justification via the legacy of ‘the Aryan doctrine’ and Hindu nationalism. Their essays were written from 2016 to 2023, when India’s democratic institutions were subverted and caste-based oppression overflowed into public space―killing and menacing the lower castes of all religions, minorities, women, students and the media.
+<br>
+This book chronicles the ascending oppression of democracy in India, a veritable biography of authoritarianism. Dwivedi and Mohan reject simplistic accounts of India’s politics as the opposition between ‘Hindu majoritarian nationalism’ and ‘the religious minorities’, or between ‘Hindu fundamentalism’ and ‘religious pluralism’. They propose instead a genuinely transformative account of Indian politics, grounded in political philosophy and in the lower- caste majority position
+<br>
+What does revolution mean where the constitutional promise of equality is betrayed daily by the millennia- old inequality of caste? What does politics mean where religion serves as the justification for descent- based enslavement and indignity? Revolution has only one sense in India, the annihilation of caste; and ‘citizen’ has only one sense, the people of the state shedding caste and racism.
+},
+  author={Divya Dwivedi and Shaj Mohan},
+  editor={Maël Montévil},
+  title= {Indian Philosophy, Indian Revolution: On Caste and Politics},
+  url={https://www.hurstpublishers.com/book/indian-philosophy-indian-revolution/},
+  isbn={978-191172323}
+}
+ 
+@inBook{2023-Montevil-Nancy-Anastase-immunite,
+  publisher= {Hermann},
+  language  = {fr},
+  year= {2023},
+    day       = {29},
+      month     = 11,
+  abstract= {Dans ce texte, je propose trois ouvertures à partir des réflexions de Jean-Luc Nancy concernant le corps,
+notamment dans Corpus et L’Intrus.},
+title={Remarques sur les corps},
+author={Maël Montévil},
+  editor={Divya Dwivedi and Jérôme Lèbre and Maël Montévil and François Warin},
+  booktitle= {Jean-Luc Nancy : Anastasis de la pensée},
+  url={https://www.editions-hermann.fr/livre/jean-luc-nancy-anastasis-de-la-pensee-divya-dwivedi},
+  isbn={9791037032270},
+  collection={Rue de la Sorbonne}
+}
+ 
+@Book{2023-DLMW-Nancy-Anastase,
+  publisher= {Hermann},
+  language  = {fr},
+  year= {2023},
+    day       = {29},
+      month     = 11,
+  abstract= {L’œuvre singulière plurielle de Jean-Luc Nancy a croisé presque toutes les préoccupations majeures de la
+philosophie – temps, être, espace, négativité, forme, image, poésie –, et a exercé une influence considérable
+sur de nombreux intellectuels et chercheurs du monde entier. Dans cet ouvrage, qui rassemble des articles
+rédigés par des philosophes et spécialistes reconnus, français et étrangers (Europe, Inde, États-Unis, Japon,
+Brésil, Chili, Égypte), les auteurs rendent hommage à Nancy pour son amitié et sa pensée. <br>
+Considérant qu’une histoire particulière de la philosophie a pris fin, Nancy a montré que la philosophie peut se
+lever à nouveau, touchant à son éternité. Il a invité à la recommencer de manière multiple, métaphysique, post-
+phénoménologique, politique, littéraire et esthétique. Se souvenir de sa pensée, c’est donc recommencer ici
+d’une manière plurielle avec lui ; c’est relancer dans son sillage la réflexion sur la démocratie et l’art, en
+réassumant une approche résolument transversale, avec ce que Nancy appelait anastasis – ce qui « ne provient
+pas de soi » mais « vient de l’autre, ou relève de l’autre en lui ».},
+  author={Divya Dwivedi and Jérôme Lèbre and Maël Montévil and François Warin},
+  title= {Jean-Luc Nancy : Anastasis de la pensée},
+  url={https://www.editions-hermann.fr/livre/jean-luc-nancy-anastasis-de-la-pensee-divya-dwivedi},
+  isbn={9791037032270},
+  collection={Rue de la Sorbonne}
+}
+
+
 @InBook{2023-Montevil-Mathematical-Modeling-organisms,
   author    = {Montévil, Maël},
   editor    = {Bizzarri, Mariano},
  title     = {Mathematical modeling in the study of organisms and their parts},
-  year      = {to appear},
+  year      = {2024},
+  month={01},
+  day={26},
   series    = {Methods in Molecular Biology},
   abstract  = {Mathematical modeling is a very powerful tool to understand natural phenomena. Such a tool carries its own assumptions and should always be used critically. In this chapter we highlight the key ingredients and steps of modeling and focus on their biological interpretation. In particular, we discuss the role of theoretical principles in writing models. We also highlight the meaning and interpretation of equations. The main aim of this chapter is to facilitate the interaction between biologists and mathematical modelers. We focus on the case of cell proliferation and motility in the context of multicellular organisms.},
   booktitle = {Systems Biology 2nd edition},
   keywords  = {Equations, Mathematical modeling, Parameters, Proliferation, Theory},
-  language  = {en}
+  language  = {en},
+  url={https://link.springer.com/book/9781071635766},
+  isbn={9781071635766}
 }
 
 
@@ -37,27 +103,36 @@ abstract={Physics has several concepts of randomness that build on the idea that
 Then, randomness operates at the level of possibilities themselves and is the basis of the historicity of biological objects. We emphasize that this concept of randomness is not only relevant when aiming to predict the future. Instead, it shapes biological organizations and ecosystems. As an illustration, we argue that a critical issue of the Anthropocene is the disruption of the biological organizations that natural history has shaped, leading to a collapse of biological possibilities.},
 publisher={Routledge}
 }
-@InBook{2023-Montevil-chance-hasard-biologie,
+
+
+
+@InBook{2023-Montevil-Stiegler,
   author= {Ma{\"e}l Mont{\'e}vil},
-  title= {Comment le hasard façonne le vivant ?},
+  title= {Bernard Stiegler: Friendship and Fellowship},
   language  = {en},
-  year= {2023},
-  booktitle= {Figurer le hasard : questions de théorie},
-editor={Anne Duprat and others},
-abstract={La physique possède plusieurs concepts de hasard qui reposent néanmoins tous sur l’idée que les possibilités sont données d’avance. En revanche, un nombre croissant de biologistes théoriciens cherchent à introduire la notion de nouvelles possibilités, c’est-à-dire des modifications de l’espace des possibles - une idée déjà discutée par Bergson et qui n’a pas été véritablement poursuivie scientifiquement jusqu’à récemment (sauf, en un sens, dans la systématique, c’est-à-dire la méthode de classification des êtres vivants). 
-Alors, le hasard opère au niveau des possibilités elles-mêmes et est à la base de l’historicité des objets biologiques. Nous soulignons que ce concept de hasard n’est pas seulement pertinent lorsqu’on cherche à prédire l’avenir. Au contraire, il façonne les organisations biologiques et les écosystèmes. À titre d’illustration, nous soutenons qu’une question cruciale de l’Anthropocène est la disruption des organisations biologiques que l’histoire naturelle a structurées, conduisant à un effondrement des possibilités biologiques. },
-publisher={Éditions CNRS}
+  year= {2024},
+  month={02},
+  day={08},
+  booktitle= {On Bernard Stiegler - Philosopher of Friendship},
+editor={Jean-Luc Nancy},
+abstract={"What I love, and those whom I love, you, that is to say us in so far as we are capable of forming a we, all this I love, and I love them, and I love you infinitely" (Bernard Steigler April 1952- August 2020).
+<br>
+When Bernard Stiegler writes "I love you" in the quote above, he openly provokes us to question or experience the meaning or contact of these words. He also invites us to question the relationship between a thinker's life and their thought. For Stiegler, they were inextricable. His life was one that focused on friendship but not friendships at a purely social level but ones that produced philosophy, politics, and existential truths.
+<br>
+Bringing together scholars who knew Stiegler, including Shaj Mohan, Achille Mbembe, Divya Dwivedi, Peter Szendy, and Emily Apter, this volume provides an original - and personal - insight into his life and philosophy. Each piece gives a sense of the wide range of Stiegler's work and how it affected the praxis of the philosopher in different parts of the world.},
+url={https://www.bloomsbury.com/uk/on-bernard-stiegler-9781350329034/},
+publisher={Bloomsbury},
+isbn={9781350329034}
 }
-
-
-
 
 
 @InBook{2023-Montevil-Stiegler-memory-future,
   author= {Ma{\"e}l Mont{\'e}vil},
   title= {Plaine Commune, contributive learning territory},
   language  = {en},
-  year= {2023},
+  year= {2024},
+    month={01},
+  day={25},
   booktitle= {Memories for the Future:
 Thinking with Bernard Stiegler},
 editor={Bart Buseyne and Georgios Tsagdis and Paul Willemarck},
@@ -73,7 +148,10 @@ economy, digital urbanism, and young children’s
 development in the context of the overuse of digital media.
 Here, we focus on the group on digital media and young
 children’s development and how academics and inhabitant
-works integrate.}
+works integrate.},
+url={https://www.bloomsbury.com/uk/bernard-stiegler-9781350410459/},
+publisher={Bloomsbury},
+isbn={9781350410442}
 }
 
 
@@ -83,14 +161,18 @@ works integrate.}
   publisher= {Springer Nature},
   title= {Modeling organogenesis from biological first principles},
   language  = {en},
-  year= {2023},
+  year= {2023},    
+  month={12},
+  day={17},
   abstract= {Unlike inert objects, organisms and their cells have the ability to initiate activity by themselves, and thus change their properties or states even in the absence of an external cause. This crucial difference led us to search for principles suitable for the study organisms. We propose that cells follow the default state of proliferation with variation and motility, a principle of biological inertia. This means that in the presence of sufficient nutrients, cells will express their default state. We also propose a principle of variation that addresses two central features of organisms, variation and historicity. To address interdependence between parts, we use a third principle, the principle of organization: more specifically, the notion of the closure of constraints. Within this theoretical framework, constraints are specific theoretical entities defined by their relative stability with respect to the processes they constrain. Constraints are mutually dependent in an organized system and act on the default state.
     <br>
     
 Here we discuss the application and articulation of these principles for mathematical modeling of morphogenesis in a specific case, that of mammary ductal morphogenesis, with an emphasis on the default state. Our model has both a biological component, the cells, and a physical component, the matrix that contains collagen fibers. Cells are agents that move and proliferate unless constrained; they exert mechanical forces that i) act on collagen fibers and ii) on other cells. As fibers are organized, they constrain the cells’ ability to move and to proliferate. This model exhibits a circularity that can be interpreted in terms of the closure of constraints. Implementing our mathematical model shows that constraints to the default state are sufficient to explain the formation of mammary epithelial structures. Finally, the success of this modeling effort suggests a step-wise approach whereby additional constraints imposed by the tissue and the organism can be examined in silico and rigorously tested by in vitro and in vivo experiments, in accordance with the organicist perspective we embrace.},
   editor={Matteo Mossio},
   booktitle= {Organization in Biology: Foundational Enquiries into a Scientific Blindspot},
-  collection={History, Philosophy and Theory of the Life Sciences}
+  collection={History, Philosophy and Theory of the Life Sciences},
+  url={https://link.springer.com/book/9783031389672},
+  isbn={9783031389672}
 }
 
 @InBook{2022-Postface-Giorgini,
