--- a/src/assets/bib/bibM.bib
+++ b/src/assets/bib/bibM.bib
@@ -89,7 +89,15 @@ abstract={La physique possède plusieurs concepts de hasard qui reposent néanmo
 Alors, le hasard opère au niveau des possibilités elles-mêmes et est à la base de l'historicité des objets biologiques. Nous soulignons que ce concept de hasard n'est pas seulement pertinent lorsqu'on cherche à prédire l'avenir. Au contraire, il façonne les organisations biologiques et les écosystèmes. À titre d'illustration, nous soutenons qu'une question cruciale de l'Anthropocène est la disruption des organisations biologiques que l'histoire naturelle a structurées, conduisant à un effondrement des possibilités biologiques.}
 }
 
-
+@inBook{2023-Montevil-disruption-developpement,
+  language  = {fr},
+  year= {submitted},
+title={Disruptions du développement humain},
+author={Maël Montévil},
+  booktitle= {L'humain qui vient},
+  abstract={Les biologistes décrivent actuellement une multitude de disruptions ayant lieu à tous les niveaux d’organisation du vivant, humains et non-humains. Ces disruptions proviennent principalement des technologies, qu’il s’agisse de la machine thermique issue de la première révolution industrielle, et du changement climatique subséquent, de la chimie avec notamment les perturbateurs endocriniens qui en sont issus, ou du numérique avec l’immixtion des écrans dans la relation parents-jeunes enfants (dans le cas des humains). Les infidélités du milieu ne sont pas étrangères au vivant comme le soulignait Canguilhem, mais la spécificité de ces disruption est leur rythme qui excède les capacité normative du vivant, humain et non-humain, conduisant à une contrepartie biologique de ce que Stiegler appelait la disruption comme régime actuel des sociétés humaines.
+Nous insisterons sur les conséquences de ces disruptions concernant le développement humain, biologique et psychique, et nous indiquerons des réponses possibles face à ces disruptions. }
+}
 
 @InBook{2023-Montevil-chance-randomness-biology,
   author= {Ma{\"e}l Mont{\'e}vil},
