--- a/src/assets/bib/2023-Montevil-Stiegler-memory-future.bib
+++ b/src/assets/bib/2023-Montevil-Stiegler-memory-future.bib
@@ -23,5 +23,6 @@
 		  integrate.},
   url		= {https://www.bloomsbury.com/uk/bernard-stiegler-9781350410459/},
   publisher	= {Bloomsbury},
-  isbn		= {9781350410442}
+  isbn		= {9781350410442},
+  page		= {167-174}
 }
