--- a/src/assets/bib/bibM.bib
+++ b/src/assets/bib/bibM.bib
@@ -183,7 +183,8 @@ children’s development and how academics and inhabitant
 works integrate.},
 url={https://www.bloomsbury.com/uk/bernard-stiegler-9781350410459/},
 publisher={Bloomsbury},
-isbn={9781350410442}
+isbn={9781350410442},
+page={167-174}
 }
 
 
@@ -1105,7 +1106,7 @@ Nous nous intéressons ensuite à la question des niveaux d'organisation, par de
   day      = {7},
    note    = {\url{https://montevil.org/publications/books/2011-Montevil-Temps-Biologique-These/}},
   keywords = {criticité, symmétries, historicité, variabilité, temps biologique, organisme, mesure, renormalisation},
-  url      = {http://www.theses.fr/2011PA05T020},
+  url      = {https://hal.science/tel-04514335},
 }
 
 @Article{2011-LM-Protention-Retention-Biology,
