--- a/BIB/bibM.bib
+++ b/BIB/bibM.bib
@@ -35,8 +35,7 @@ This book chronicles the ascending oppression of democracy in India, a veritable
 <br>
 What does revolution mean where the constitutional promise of equality is betrayed daily by the millennia- old inequality of caste? What does politics mean where religion serves as the justification for descent- based enslavement and indignity? Revolution has only one sense in India, the annihilation of caste; and ‘citizen’ has only one sense, the people of the state shedding caste and racism.
 },
-  author={Divya Dwivedi and Shaj Mohan},
-  editor={Maël Montévil},
+  author={Divya Dwivedi and Shaj Mohan and Maël Montévil},
   title= {Indian Philosophy, Indian Revolution: On Caste and Politics},
   url={https://www.hurstpublishers.com/book/indian-philosophy-indian-revolution/},
   isbn={978-191172323}
@@ -350,6 +349,15 @@ page = "6",
 url={http://links-series.com/n-5-6-marcel-proust/},
   eprint    = {https://montevil.org/assets/pdf/2021-Montevil-Bernard-Stiegler.pdf},
  note    = {\url{https://montevil.org/publications/varia/2021-Montevil-Bernard-Stiegler/}}
+}
+
+
+@article{submitted-Chollat-Montevil-FEP-entropy,
+author = {Marie Chollat-Namy and Maël Montévil },
+title = {What drives the brain ? Organizational changes, FEP and anti-entropy},
+journal = { },
+year = {submitted},
+abstract = { The free-energy principle (FEP) furnishes a computational, physical and teleological theory for understanding biological organization as cognitive agent minimizing their entropy in relation to their environment. Is minimizing entropy the first principle driving all dynamics of cognition ?  Is it enough to account for organizational changes in a open-ended way ? After a general presentation of the literature on FEP, we then turn to the paradoxical case of the brain under the influence of psychedelics, where FEP is challenged by an increased cerebral entropy, which induces organizational changes of the cognition. From on this paradox, we then identify some limits of the FEP, notably applying concepts of information, optimization and predefined phase space to biology, which does not account for strong organizational changes. We therefore propose an organicist theoretical alternative with the concept of anti-entropy, explaining how a biological system's disorganization can enable its "unprestatable" reorganization and so its open-ended evolution. We finally rediscuss the concept of activity and passivity of living beings and the notion that their default state corresponds to an activity.}
 }
 
 @article{submitted-Montevil-Disruption-Phenology,
