--- a/src/assets/bib/2023-DMM-Castes-Politics.bib
+++ b/src/assets/bib/2023-DMM-Castes-Politics.bib
@@ -32,8 +32,7 @@
 		  sense in India, the annihilation of caste; and
 		  ‘citizen’ has only one sense, the people of the state
 		  shedding caste and racism. },
-  author	= {Divya Dwivedi and Shaj Mohan},
-  editor	= {Maël Montévil},
+  author	= {Divya Dwivedi and Shaj Mohan and Maël Montévil},
   title		= {Indian Philosophy, Indian Revolution: On Caste and
 		  Politics},
   url		= {https://www.hurstpublishers.com/book/indian-philosophy-indian-revolution/},
