update and inside rferences

--- a/src/assets/bib/2023-Montevil-disruption-developpement.bib
+++ b/src/assets/bib/2023-Montevil-disruption-developpement.bib
@@ -1,10 +1,14 @@
 
 @InBook{	  2023-montevil-disruption-developpement,
   language	= {fr},
-  year		= {submitted},
+  year		= {2024},
+  month		= {09},
+  day		= {25},
   title		= {Disruptions du développement humain},
   author	= {Maël Montévil},
   booktitle	= {L'humain qui vient},
+  editor	= {Raphael Zagury-Orly and Alain Fleischer},
+  isbn		= {9791037040350},
   abstract	= {Les biologistes décrivent actuellement une multitude de
 		  disruptions ayant lieu à tous les niveaux d’organisation
 		  du vivant, humains et non-humains. Ces disruptions
