--- a/src/assets/bib/bibM.bib
+++ b/src/assets/bib/bibM.bib
@@ -120,19 +120,24 @@ pas de soi » mais « vient de l’autre, ou relève de l’autre en lui ».},
   title= {Comment le hasard façonne le vivant ?},
   language  = {fr},
   year= {to appear},
-  booktitle= {Figurer le hasard : questions de théorie},
-editor={Anne Duprat and others},
+  booktitle= {Figures du Hasard },
+editor={Anne Duprat and Fiona Mcintosh-Varjabédian and Anne-Gaëlle Weber and Alison James and Divya Dwivedi},
 abstract={La physique possède plusieurs concepts de hasard qui reposent néanmoins tous sur l'idée que les possibilités sont données d'avance. En revanche, un nombre croissant de biologistes théoriciens cherchent à introduire la notion de nouvelles possibilités, c'est-à-dire des modifications de l'espace des possibles - une idée déjà discutée par Bergson et qui n'a pas été véritablement poursuivie scientifiquement jusqu'à récemment (sauf, en un sens, dans la systématique, c'est-à-dire la méthode de classification des êtres vivants). 
 <br>
-Alors, le hasard opère au niveau des possibilités elles-mêmes et est à la base de l'historicité des objets biologiques. Nous soulignons que ce concept de hasard n'est pas seulement pertinent lorsqu'on cherche à prédire l'avenir. Au contraire, il façonne les organisations biologiques et les écosystèmes. À titre d'illustration, nous soutenons qu'une question cruciale de l'Anthropocène est la disruption des organisations biologiques que l'histoire naturelle a structurées, conduisant à un effondrement des possibilités biologiques.}
+Alors, le hasard opère au niveau des possibilités elles-mêmes et est à la base de l'historicité des objets biologiques. Nous soulignons que ce concept de hasard n'est pas seulement pertinent lorsqu'on cherche à prédire l'avenir. Au contraire, il façonne les organisations biologiques et les écosystèmes. À titre d'illustration, nous soutenons qu'une question cruciale de l'Anthropocène est la disruption des organisations biologiques que l'histoire naturelle a structurées, conduisant à un effondrement des possibilités biologiques.},
+publisher={CNRS éditions}
 }
 
 @inBook{2023-Montevil-disruption-developpement,
   language  = {fr},
-  year= {submitted},
+  year= {2024},
+  month={09},
+  day={25},
 title={Disruptions du développement humain},
 author={Maël Montévil},
   booktitle= {L'humain qui vient},
+  editor={Raphael Zagury-Orly and Alain Fleischer},
+  ISBN ={9791037040350},
   abstract={Les biologistes décrivent actuellement une multitude de disruptions ayant lieu à tous les niveaux d’organisation du vivant, humains et non-humains. Ces disruptions proviennent principalement des technologies, qu’il s’agisse de la machine thermique issue de la première révolution industrielle, et du changement climatique subséquent, de la chimie avec notamment les perturbateurs endocriniens qui en sont issus, ou du numérique avec l’immixtion des écrans dans la relation parents-jeunes enfants (dans le cas des humains). Les infidélités du milieu ne sont pas étrangères au vivant comme le soulignait Canguilhem, mais la spécificité de ces disruption est leur rythme qui excède les capacité normative du vivant, humain et non-humain, conduisant à une contrepartie biologique de ce que Stiegler appelait la disruption comme régime actuel des sociétés humaines.
 Nous insisterons sur les conséquences de ces disruptions concernant le développement humain, biologique et psychique, et nous indiquerons des réponses possibles face à ces disruptions. }
 }
@@ -141,9 +146,11 @@ Nous insisterons sur les conséquences de ces disruptions concernant le dévelop
   author= {Ma{\"e}l Mont{\'e}vil},
   title= {How does randomness shape the living?},
   language  = {en},
-  year= {to appear},
-  booktitle= {Figuring Chance: Questions of Theory},
-editor={Anne Duprat and others},
+  year= {2024},
+  month={7},
+  day={31},
+  booktitle= {Figures of Chance II Chance in Theory and Practice},
+editor={Anne Duprat and  Alison James and  Divya Dwivedi},
 abstract={Physics has several concepts of randomness that build on the idea that the possibilities are pre-given. By contrast, an increasing number of theoretical biologists attempt to introduce new possibilities, that is to say, changes of possibility space – an idea already discussed by Bergson and that was not genuinely pursued scientifically until recently (except, in a sense, in systematics, i.e, the method to classify living beings). 
 <br>
 Then, randomness operates at the level of possibilities themselves and is the basis of the historicity of biological objects. We emphasize that this concept of randomness is not only relevant when aiming to predict the future. Instead, it shapes biological organizations and ecosystems. As an illustration, we argue that a critical issue of the Anthropocene is the disruption of the biological organizations that natural history has shaped, leading to a collapse of biological possibilities.},
