--- a/BIB/bibM.bib
+++ b/BIB/bibM.bib
@@ -946,7 +946,7 @@ Avec Darwin, les êtres vivants sont devenus partie intégrante d'un processus h
   doi       = {10.1007/s11229-017-1668-5},
   eprint    = {https://montevil.org/assets/pdf/2019-Montevil-Possibility-Spaces-Novelty.pdf},
  note    = {\url{https://montevil.org/publications/articles/2019-Montevil-Possibility-Spaces-Novelty/}},
-  keywords  = {Novelty, Possibility space, Biological functions, Organization, Emergence},
+  keywords  = {Novelty, Possibility space, Biological function, Organization, Emergence},
   language  = {english},
   publisher = {Springer Science and Business Media {LLC}},
 }
@@ -1135,7 +1135,7 @@ La notion de symétrie ayant un statut fondationel pour les théories physiques,
 Nous nous intéressons ensuite à la question des niveaux d'organisation, par deux voies complémentaires. Nous l'abordons dans un premier temps par la notion de clôture organisationnelle. Ensuite nous la considérons comme associée à des singularités fortes, telles que dans les situations critiques. Enfin, nous esquissons un schème opératoriel de l'unité de l'organisme, qui combine un grand nombre des aspects préalablement exposés.},
   day      = {7},
    note    = {\url{https://montevil.org/publications/books/2011-Montevil-Temps-Biologique-These/}},
-  keywords = {criticité, symmétries, historicité, variabilité, temps biologique, organisme, mesure, renormalisation},
+  keywords = {criticité, symmétries, historicité, variabilité, temps biologique, organisms, mesure, renormalization},
   url      = {https://hal.science/tel-04514335},
 }
 
@@ -1319,7 +1319,7 @@ Nous nous intéressons ensuite à la question des niveaux d'organisation, par de
   doi       = {10.1007/s10539-019-9687-x},
   eprint    = {https://montevil.org/assets/pdf/2019-Montevil-Measurement-Biology-Theory.pdf},
  note    = {\url{https://montevil.org/publications/articles/2019-Montevil-Measurement-Biology-Theory/}},
-  keywords  = {Biological measurement, evolution, experiments, strains, symmetry, systematics},
+  keywords  = {measurement, evolution, experiments, strains, symmetry, systematics},
   language  = {english},
   publisher = {Springer Science and Business Media {LLC}},
 }
