--- a/src/assets/bib/2019-Montevil-Possibility-Spaces-Novelty.bib
+++ b/src/assets/bib/2019-Montevil-Possibility-Spaces-Novelty.bib
@@ -47,7 +47,7 @@
   doi		= {10.1007/s11229-017-1668-5},
   eprint	= {https://montevil.org/assets/pdf/2019-Montevil-Possibility-Spaces-Novelty.pdf},
   note		= {\url{https://montevil.org/publications/articles/2019-Montevil-Possibility-Spaces-Novelty/}},
-  keywords	= {Novelty, Possibility space, Biological functions,
+  keywords	= {Novelty, Possibility space, Biological function,
 		  Organization, Emergence},
   language	= {english},
   publisher	= {Springer Science and Business Media {LLC}}
